# vizan-client-python

./: .coveragerc  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py
tests/: test_vizan_client.py
vizan_client/: __init__.py  json_utils.py  ui.py
vizan_client/docker_server/: __init__.py  docker-compose.yml
vizan_client/docker_server/config/environment/: development.env
vizan_client/docker_server/config/webserver/: nginx.tmpl
