[build-system]
requires = ["setuptools", "wheel"]

[metadata]
name = "vizan-client-python"
version = "0.1.0"
description = "A web client to VizAn REST server, global or local."
authors = ["Rudolfs Petrovs <rudolfs.petrovs@lu.lv>"]
license = "GPL-3"
url = "https://github.com/lv-csbg/vizan-client-python"
